fix(dropdown): fix broken alignment due to inlineLabel

--- a/css/src/utils/utility.css
+++ b/css/src/utils/utility.css
@@ -26,3 +26,7 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.white-space-nowrap {
+  white-space: nowrap;
+}
